# Homework_3

./: CMakeLists.txt  README.md
.github/workflows/: release.yml
app/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  allocators.cpp  allocators.h  customVector.cpp  customVector.h
tests/: CMakeLists.txt  tests_lib.cpp
